# PhoneBookAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tox.ini
phone-book-api-server/: .gitignore  Dockerfile  pyproject.toml
phone-book-api-server/phone_book_api_server/: constants.py  containers.py
phone-book-api-server/phone_book_api_server/api/routers/: contact_router.py  index_router.py
phone-book-api-server/phone_book_api_server/clients/: db_client.py
phone-book-api-server/phone_book_api_server/data_models/: db.py
phone-book-api-server/phone_book_api_server/services/: contact_service.py
phone-book-api-server/tests/: __init__.py
phone-book-api-server/tests/test_data/: config.yaml
phone-book-api-server/tests/unit/: test_shared_base_model.py
phone_book_api_server/: .gitignore  __init__.py  __main__.py  config.yaml  constants.py  containers.py
phone_book_api_server/api/: server.py
phone_book_api_server/api/routers/: contact_router.py  examples_router.py  health_router.py
phone_book_api_server/clients/: db_client.py  postgres_client.py
phone_book_api_server/data_models/: base.py  contacts.py  health.py  info.py
phone_book_api_server/database/: connection.py  models.py
phone_book_api_server/exceptions/: contact.py
phone_book_api_server/services/: api_service.py  contact_service.py  db_service.py
tests/: __init__.py  conftest.py
tests/unit/: test_main.py  test_shared_base_model.py
tests/unit/clients/: conftest.py  test_db_client.py  test_examples_client.py
tests/unit/routers/: conftest.py  test_examples_router.py  test_health_router.py  test_index_docs_routers.py
tests/unit/services/: conftest.py  test_contact_service.py  test_examples_service.py
(+4 files in other folders)
